# Chess

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/chess/: Board.cpp  Board.hpp  BotIntegration.cpp  BotIntegration.hpp
src/core/: MessageBox.cpp  MessageBox.hpp  Process.cpp  Process.hpp
src/game/: ChessGame.cpp  ChessGame.hpp  ChessView.cpp  ChessView.hpp  ChessViews.cpp  ChessViews.hpp  Colors.cpp  Colors.hpp  GameOver.cpp  GameOver.hpp  PieceRenderer.cpp  PieceRenderer.hpp  PromotionSelector.cpp  PromotionSelector.hpp  Renderer.cpp  Renderer.hpp  Run.cpp  Utils.cpp  Utils.hpp  View.cpp  View.hpp  ViewManager.cpp  ViewManager.hpp  WaitingForPlayerView.cpp  WaitingForPlayerView.hpp  Window.cpp  Window.hpp
src/game/binaries/: Binaries.hpp
